--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <body>
 <div id="map"></div>
 <div id="instructions-panel">
-    <img id="instruction-image" src="https://i.imgur.com/tkZqS4J.png" alt="Map Instructions">
+    <img id="instruction-image" src="https://i.imgur.com/QcSgbrV.jpeg" alt="Map Instructions">
 </div>
 <div id="search-container"></div>
 
