--- a/index.html
+++ b/index.html
@@ -10,17 +10,38 @@
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.min.js"></script>
     <style>
         body { margin: 0; padding: 0; }
-        #map { position: absolute; top: 0; bottom: 0; left: 0; right: 0; }
+        #map { position: absolute; top: 0; bottom: 0; left: 320px; right: 0; }
+
+        #instructions-panel {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 300px;
+            bottom: 0;
+            background-color: #f8f8f8;
+            padding: 20px;
+            font-family: Arial, sans-serif;
+            font-size: 14px;
+            overflow-y: auto;
+            box-sizing: border-box;
+        }
+        #instruction-image {
+            width: 100%;
+            height: auto;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
         #search-container {
             position: absolute;
             top: 10px;
-            left: 10px;
+            right: 10px;
             z-index: 1000;
         }
         #search-results {
             position: absolute;
             top: 70px;
-            left: 10px;
+            right: 10px;
             background-color: white;
             border: 1px solid #ddd;
             border-radius: 4px;
@@ -31,13 +52,23 @@
             max-width: 300px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
         }
+
         .mapboxgl-ctrl-geocoder {
             width: 300px !important;
+        }
+        .mapboxgl-popup-content {
+            font-family: Arial, sans-serif;
+            font-size: 13px;
         }
     </style>
 </head>
 <body>
 <div id="map"></div>
+
+<div id="instructions-panel">
+    <img id="instruction-image" src="https://i.imgur.com/QcSgbrV.jpg" alt="Map Instructions">
+</div>
+
 <div id="search-container"></div>
 <div id="search-results"></div>
 
@@ -66,6 +97,31 @@
         const [lon, lat] = result.center;
         map.flyTo({ center: [lon, lat], zoom: 14 });
         findCouncilDistrict(lat, lon);
+    });
+
+    const popup = new mapboxgl.Popup({
+        closeButton: false,
+        closeOnClick: false
+    });
+
+    map.on('load', () => {
+        map.on('mousemove', 'bklynlibrary-branches-0qfsv6', (e) => {
+            if (e.features.length > 0) {
+                const props = e.features[0].properties;
+                const popupHtml = `
+                    <strong>Branch:</strong> ${props["branch"] || "N/A"}<br/>
+                    <strong>Council District:</strong> ${props["CouncilDistrict"] || "N/A"}<br/>
+                    <strong>Council Member:</strong> ${props["Council Member Name"] || "N/A"}<br/>
+                    <strong>District Office Address:</strong> ${props["District Office Address"] || "N/A"}<br/>
+                    <strong>District Office Phone:</strong> ${props["District Office Phone"] || "N/A"}<br/>
+                `;
+                popup.setLngLat(e.lngLat).setHTML(popupHtml).addTo(map);
+            }
+        });
+
+        map.on('mouseleave', 'bklynlibrary-branches-0qfsv6', () => {
+            popup.remove();
+        });
     });
 
     function findCouncilDistrict(lat, lon) {
