--- a/index.html
+++ b/index.html
@@ -3,33 +3,52 @@
 <head>
     <meta charset="utf-8" />
     <title>BPL Council District Lookup</title>
-    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+    <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no, width=device-width" />
     <script src="https://api.mapbox.com/mapbox-gl-js/v3.1.0/mapbox-gl.js"></script>
     <link href="https://api.mapbox.com/mapbox-gl-js/v3.1.0/mapbox-gl.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.css" />
     <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.2/mapbox-gl-geocoder.min.js"></script>
     <style>
-        body { margin: 0; padding: 0; }
-        #map { position: absolute; top: 0; bottom: 0; left: 320px; right: 0; }
+        body { margin: 0; padding: 0; font-family: Arial, sans-serif; }
+
+        #map {
+            position: absolute;
+            top: 0; bottom: 0;
+            left: 320px; right: 0;
+        }
 
         #instructions-panel {
             position: absolute;
-            top: 0;
-            left: 0;
+            top: 0; left: 0;
             width: 300px;
             bottom: 0;
             background-color: #f8f8f8;
             padding: 20px;
-            font-family: Arial, sans-serif;
             font-size: 14px;
             overflow-y: auto;
             box-sizing: border-box;
+            transition: transform 0.3s ease-in-out;
         }
+
         #instruction-image {
             width: 100%;
             height: auto;
             border-radius: 5px;
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+
+        #toggle-button {
+            display: none;
+            position: absolute;
+            top: 10px;
+            left: 10px;
+            z-index: 1002;
+            background: #0055b8;
+            color: white;
+            padding: 8px 12px;
+            font-size: 14px;
+            border: none;
+            border-radius: 4px;
         }
 
         #search-container {
@@ -38,6 +57,7 @@
             right: 10px;
             z-index: 1000;
         }
+
         #search-results {
             position: absolute;
             top: 70px;
@@ -56,14 +76,28 @@
         .mapboxgl-ctrl-geocoder {
             width: 300px !important;
         }
+
         .mapboxgl-popup-content {
-            font-family: Arial, sans-serif;
             font-size: 13px;
+        }
+
+        /* Mobile styles */
+        @media (max-width: 768px) {
+            #map { left: 0; }
+            #instructions-panel {
+                transform: translateX(-100%);
+                width: 100%;
+                background-color: white;
+                z-index: 1000;
+            }
+            #toggle-button { display: block; }
         }
     </style>
 </head>
 <body>
 <div id="map"></div>
+
+<button id="toggle-button">Show Instructions</button>
 
 <div id="instructions-panel">
     <img id="instruction-image" src="https://i.imgur.com/QcSgbrV.jpg" alt="Map Instructions">
@@ -148,6 +182,16 @@
                 panel.style.display = 'block';
             });
     }
+
+    // Toggle instructions panel on mobile
+    const toggleBtn = document.getElementById('toggle-button');
+    const panel = document.getElementById('instructions-panel');
+
+    toggleBtn.addEventListener('click', () => {
+        const isVisible = panel.style.transform !== 'translateX(-100%)';
+        panel.style.transform = isVisible ? 'translateX(-100%)' : 'translateX(0)';
+        toggleBtn.textContent = isVisible ? 'Show Instructions' : 'Hide Instructions';
+    });
 </script>
 </body>
 </html>
