--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 </div>
 
 <a href="https://www.bklynlibrary.org" target="_blank" id="bpl-logo">
-    <img src="https://www.bklynlibrary.org/sites/default/files/logo-white.svg" alt="BPL logo">
+    <img src="https://i.imgur.com/I9NIKOl.png" alt="BPL logo">
 </a>
 
 <div id="search-container"></div>
