--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 <button id="toggle-button">Show Instructions</button>
 
 <div id="instructions-panel">
-    <img id="instruction-image" src="https://i.imgur.com/xxtO06C.jpeg" alt="Map Instructions">
+    <img id="instruction-image" src="https://i.imgur.com/bHBh7sQ.jpeg" alt="Map Instructions">
 </div>
 
 <a href="https://www.bklynlibrary.org" target="_blank" id="bpl-logo">
